osd: fixup OpTracker destruct assert, waiting_for_osdmap take ref      with OpRequest

Fixes: http://tracker.ceph.com/issues/38377
Signed-off-by: linbing <linbing@t2cloud.net>